<resources>
    <string name="app_name">Cotizador De Manillas</string>
    <string name="bienvenido">¡Bienvenidos!</string>
    <string name="cantidad">Cantidad</string>
    <string name="errCero">Por favor, digita una cantidad mayor a 0</string>
    <string name="errCantidad">Por favor, digite una cantidad</string>
    <string name="material">Material</string>
    <string name="selecMaterial">Seleccione el Material</string>
    <string name="errMaterial">Por favor, seleccione un Material</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="dije">Dije</string>
    <string name="errDije">Por favor, seleccione un Dije</string>
    <string name="selecDije">Seleccione el Dije</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="tipo">Tipo</string>
    <string name="selecTipo">Seleccione el Tipo</string>
    <string name="errTipo">Por favor, seleccione un Tipo</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="niquel">Niquel</string>
    <string name="plata">Plata</string>
    <string name="moneda">Tipo de moneda</string>
    <string name="selecTipoMoneda">Seleccione el Tipo de Moneda</string>
    <string name="errTipoMoneda">Por favor, seleccione un Tipo de Moneda</string>
    <string name="dolar">Dolar</string>
    <string name="pesos">Pesos</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar Campos</string>

    <string-array name="materiales">
        <item>@string/selecMaterial</item>
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>

    <string-array name="dijes">
        <item>@string/selecDije</item>
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>

    <string-array name="tipos">
        <item>@string/selecTipo</item>
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>

    <string-array name="monedas">
        <item>@string/selecTipoMoneda</item>
        <item>@string/dolar</item>
        <item>@string/pesos</item>
    </string-array>
</resources>
