<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txtBienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material" />

        <Spinner
            android:id="@+id/cmbMateriales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtDije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dije" />

        <Spinner
            android:id="@+id/cmbDijes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo" />

        <Spinner
            android:id="@+id/cmbTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moneda" />

        <Spinner
            android:id="@+id/cmbMonedas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular" />

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>